--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-lottie-player": "^2.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@testing-library/react": "^12.1.0",
+    "@testing-library/jest-dom": "^5.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,7 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0"
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^12.1.0"
   }
 }
