--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +43,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
     "@testing-library/jest-dom": "^5.11.0",
-    "@testing-library/react": "^11.2.5"
+    "@testing-library/react": "^12.0.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0"
   }
 }
