--- a/package.json
+++ b/package.json
@@ -3,18 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "express": "^4.17.3",
     "http-proxy-middleware": "^2.0.4",
     "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^3.1.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-lottie-player": "^2.0.0",
-    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -48,7 +45,10 @@
     "@babel/preset-react": "^7.24.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^14.5.2",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jwt-decode": "^4.0.0",
+    "react-router-dom": "^6.25.1"
   }
 }
